# clap-validator

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  check.yml  validate.yml
src/: cli.rs  commands.rs  debug.rs  fuzz.rs  index.rs  main.rs  panic.rs  plugin.rs  term.rs  tests.rs  util.rs  validator.rs
src/cli/: config.rs  log.rs  print.rs  report.rs  sandbox.rs  tracing.rs
src/cli/tracing/: record.rs
src/commands/: fuzz.rs  list.rs  validate.rs
src/debug/: instrument.rs  log.rs  panic.rs  trace.rs
src/debug/instrument/: record.rs  writer.rs
src/fuzz/: rng.rs  runner.rs
src/plugin/: ext.rs  host.rs  index.rs  instance.rs  library.rs  preset_discovery.rs  process.rs  util.rs
src/plugin/ext/: ambisonic.rs  audio_ports.rs  audio_ports_activation.rs  audio_ports_config.rs  configurable_audio_ports.rs  latency.rs  note_ports.rs  params.rs  preset_load.rs  state.rs  surround.rs  tail.rs  thread_pool.rs  voice_info.rs
src/plugin/instance/: audio_thread.rs  main_thread.rs  process.rs  shared.rs
src/plugin/preset_discovery/: indexer.rs  metadata_receiver.rs  provider.rs
src/plugin/process/: buffer.rs  events.rs  transport.rs
src/tests/: fuzz.rs  plugin.rs  plugin_instance.rs  plugin_library.rs  rng.rs
src/tests/fuzz/: runner.rs
src/tests/plugin/: descriptor.rs  layout.rs  params.rs  processing.rs  state.rs  transport.rs
src/tests/plugin_instance/: descriptor.rs  layout.rs  params.rs  processing.rs
src/tests/plugin_library/: factories.rs  preset_discovery.rs  scanning.rs
tests/: validate.rs
tests/clack-effect/src/: lib.rs  params.rs
tests/clack-synth/: Cargo.toml
tests/clack-synth/src/: lib.rs  params.rs  poly_oscillator.rs
