[package]
name = "clack-synth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clack-plugin = { git = "https://github.com/Quant1um/clack", rev = "bd6f37959270153cf2118923275cd54ad20db958" }
clack-extensions = { git = "https://github.com/Quant1um/clack", rev = "bd6f37959270153cf2118923275cd54ad20db958", features = ["audio-ports", "audio-ports-config", "configurable-audio-ports", "clack-plugin", "note-ports", "params", "state"] }
