[package]
name = "clack-synth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clack-plugin = { git = "https://github.com/Quant1um/clack", rev = "683d8067d357e81e49d3d786d0329dd04e4c5496" }
clack-extensions = { git = "https://github.com/Quant1um/clack", rev = "683d8067d357e81e49d3d786d0329dd04e4c5496", features = ["audio-ports", "audio-ports-config", "audio-ports-activation", "configurable-audio-ports", "clack-plugin", "note-ports", "params", "state", "surround", "ambisonic"] }
